backend/delete_output_v6.txt
file:///home/ph43rn/diseno-empaque/backend/scripts/delete-x03.js:58
    });
     ^

SyntaxError: Unexpected token ')'
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)

Node.js v18.20.4
